[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["chaad <sofiia.piepponen@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.0"
black = "^22.10.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
